tests/ui/consts/unstable-const-stable.stderr
error[E0658]: use of unstable library feature 'unstable'
  --> $DIR/unstable-const-stable.rs:7:5
   |
LL |     some_unstable_fn();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: see issue #42 <https://github.com/rust-lang/rust/issues/42> for more information
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature 'unstable'
  --> $DIR/unstable-const-stable.rs:8:14
   |
LL |     unsafe { write_bytes(4 as *mut u8, 0, 0) };
   |              ^^^^^^^^^^^
   |
   = note: see issue #42 <https://github.com/rust-lang/rust/issues/42> for more information
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature 'unstable'
  --> $DIR/unstable-const-stable.rs:12:5
   |
LL |     some_unstable_fn();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: see issue #42 <https://github.com/rust-lang/rust/issues/42> for more information
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature 'unstable'
  --> $DIR/unstable-const-stable.rs:13:14
   |
LL |     unsafe { write_bytes(4 as *mut u8, 0, 0) };
   |              ^^^^^^^^^^^
   |
   = note: see issue #42 <https://github.com/rust-lang/rust/issues/42> for more information
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
